# vault-rs

./: Cargo.toml  README.md  build.rs  build.tpl  rustfmt.toml
example/: Cargo.toml
example/src/: client.rs
examples/: auth_token.rs  aws.rs  kv.rs  read_kv.rs  totp.rs
scripts/: get_openapi_spec.sh
spec/: sys.json
spec/auth/: alicloud.json  approle.json  aws.json  azure.json  cert.json  cf.json  gcp.json  github.json  jwt.json  kerberos.json  kubernetes.json  ldap.json  oci.json  okta.json  radius.json  token.json  userpass.json
spec/secrets/: ad.json  alicloud.json  aws.json  azure.json  consul.json  database.json  gcp.json  gcpkms.json  kubernetes.json  kv-v2.json  kv.json  ldap.json  mongodbatlas.json  nomad.json  pki.json  rabbitmq.json  ssh.json  terraform.json  totp.json  transit.json
src/: client.rs  error.rs  lib.rs  policy.rs  response.rs  secret.rs
src/auth/: alicloud.rs  approle.rs  aws.rs  azure.rs  cert.rs  cf.rs  gcp.rs  github.rs  jwt.rs  kerberos.rs  kubernetes.rs  ldap.rs  mod.rs  oci.rs  okta.rs  radius.rs  token.rs  userpass.rs
src/backend/: policy.rs
src/engines/: aws.rs  kv2.rs  kv_v2.rs  mod.rs
src/secrets/: ad.rs  alicloud.rs  aws.rs  azure.rs  consul.rs  database.rs  gcp.rs  gcpkms.rs  kubernetes.rs  kv.rs  kv2.rs  ldap.rs  mod.rs  mongodbatlas.rs  nomad.rs  pki.rs  rabbitmq.rs  ssh.rs  terraform.rs  totp.rs  transit.rs
src/sys/: mod.rs  policy.rs
src/system/: policy.rs
