[package]
name = "vault"
version = "0.0.2"
authors = ["Liber Wang <liberwang1013@gmail.com>"]
edition = "2018"

[lib]
name = "vault"
path = "src/lib.rs"

[dev-dependencies]
log = "0.4"
env_logger = "0.7"
tokio = "0.2"
clap = "2.33"

[dependencies]
url = "2"
http = "0.2"
bytes = "1"

reqwest = {version = "0.11", features = ["json"]}
futures-util = { version = "^0.3.0", default-features = false }
futures-core = { version = "^0.3.0", default-features = false }

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
