[package]
name = "vault"
version = "0.0.3"
authors = ["Liber Wang <liberwang1013@gmail.com>"]
edition = "2021"

[lib]
name = "vault"
path = "src/lib.rs"

[dev-dependencies]
log = "0.4"
env_logger = "0.7"
tokio = { version = "1", features = ["full"] }
clap = "2.33"

[dependencies]
log = "0.4"
url = "2"
http = "0.2"
bytes = "1"

reqwest = {version = "0.11", features = ["json"]}
futures-util = { version = "^0.3.0", default-features = false }
futures-core = { version = "^0.3.0", default-features = false }

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
